--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="top Section">
             <div class="teamBox" id="homeTeam">
                 <div class="teamInfo">
-                    <div class="teamName">ΑΡΗΣ</div>
-                    <div class="teamLogo">
+                    <div class="teamName" id="homeName">ΑΡΗΣ</div>
+                    <div class="teamLogo" id="homeLogo">
                     </div>
                 </div>
-                <div class="teamScore">68
-                    <div class="fouls">
+                <div class="teamScore" id="homeScore">0
+                    <div class="fouls" id="homeFouls">
                         <div class="foul"></div>
                         <div class="foul"></div>
                         <div class="foul"></div>
@@ -27,14 +27,14 @@
             </div>
            <div class="teamBox" id="awayTeam">
                 <div class="teamInfo">
-                    <div class="teamName">ΠΑΟΚ</div>
-                    <div class="teamLogo">
+                    <div class="teamName" id="awayName">ΠΑΟΚ</div>
+                    <div class="teamLogo" id="awayLogo">
                     </div>
 
                 </div>
-                <div class="teamScore">68
-                    <div class="fouls">
-                        <div class="foul"></div>
+                <div class="teamScore" id="awayScore">0
+                    <div class="fouls" id="awayFouls">
+                        <div class="foul active"></div>
                         <div class="foul"></div>
                         <div class="foul"></div>
                         <div class="foul"></div>
@@ -46,15 +46,16 @@
         <div class="bot Section">
             <div class="gblLogo"></div>
             <div class="gameInfo">
-                <div class="timer">5:55</div>
+                <div class="timer">10:00</div>
                 <div class="periodInfo">
                     <div class="currentPeriod">
-                        4η
+                        1η
                     </div>
-                    <div class="attackTimer">20</div>
+                    <div class="attackTimer">24</div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="scoreboard.js"></script>
 </html>
