Buttons functionality and some styling experiments. A lot to change

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="teamScore" id="awayScore"><span>0</span>
                     <div class="fouls" id="awayFouls">
-                        <div class="foul active"></div>
+                        <div class="foul"></div>
                         <div class="foul"></div>
                         <div class="foul"></div>
                         <div class="foul"></div>
