Combined both timers into one. Timer now stops when a point is scored or a foul is done

--- a/index.html
+++ b/index.html
@@ -150,12 +150,10 @@
             </div>
         </div>
        <div class="timers-wrap">
-        <label for="period-timer">Period Timer</label>
-        <button onclick="toggleTimer('period')" name="period-timer">Start/Pause  PERIOD timer</button>
-
-        <label for="attack-timer">Attack Timer</label>
-        <button onclick="toggleTimer('attack')">Start/Pause  Attack timer</button>
-        <button onclick="resetTimer('attack')">Reset  Attack timer</button>
+        <label for="timer">Timer</label>
+        <button onclick="toggleTimer()" name="timer">Start/Pause Attack</button>
+        <label for="attack-reset">Reset Attack</label>
+        <button onclick="resetTimer()" name="attack-reset">Reset</button>
     </div>
     </div>
     
